Fixed finally the scrollbar problem on the mainpage

--- a/fitness-and-health-website/stylesheet.css
+++ b/fitness-and-health-website/stylesheet.css
@@ -3,7 +3,6 @@ html, body{
     margin: 0;
     padding: 0;
     overflow-x: hidden !important;
-    overflow-y: auto;
     background-color: #121212;
 }
 .index{
@@ -424,7 +423,7 @@ a.styleForEmailInMain:hover
     border-radius: 20px;
     overflow: visible;
     word-wrap: break-word;
-    animation: fadeIn 3s ease;
+    
 
 }
 .h2Box{
